--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tsparticles/shape-polygon": "^3.9.1",
     "axios": "^1.13.5",
     "framer-motion": "^12.34.0",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
