--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@tanstack/react-query": "^5.90.21",
     "@tsparticles/engine": "^3.9.1",
     "@tsparticles/shape-polygon": "^3.9.1",
+    "@types/leaflet": "^1.9.21",
     "axios": "^1.13.5",
     "framer-motion": "^12.34.0",
     "jspdf": "^4.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
@@ -29,6 +31,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "19.2.3",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "three": "^0.182.0",
     "viem": "^2.45.3",
     "wagmi": "^2.19.5"
